# secpipe

./: .gitignore  CONTRIBUTING.md  README.md  contributting.md  fix_dockerfile.sh  pyproject.toml  setup_code.sh  setup_weekend2.sh
.github/workflows/: ci.yml
src/secpipe/: cli.py
src/secpipe.egg-info/: SOURCES.txt  requires.txt
src/secpipe/models/: finding.py
src/secpipe/reporter/: json_report.py  terminal_report.py
src/secpipe/scanner/: base.py  dependencies.py  dockerfile.py  secrets.py
tests/: conftest.py  test_dockerfile_scanner.py  test_secrets_scanner.py
tests/fixtures/: bad_dockerfile  insecure_app.py  safe_app.py  vulnerable_requirements.txt
